[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Screens/PilotSelect.gd" type="Script" id=1]

[node name="PilotSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="Profiles" type="Node2D" parent="."]

[node name="Prev" type="Button" parent="."]
margin_left = 407.0
margin_top = 308.0
margin_right = 427.0
margin_bottom = 328.0
text = "<"

[node name="Next" type="Button" parent="."]
margin_left = 518.0
margin_top = 308.0
margin_right = 538.0
margin_bottom = 328.0
text = ">"

[node name="Accept" type="Button" parent="."]
margin_left = 442.0
margin_top = 308.0
margin_right = 503.0
margin_bottom = 328.0
text = "Aceptar"

[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Accept" to="." method="_on_Accept_pressed"]
